--- a/aboutcss/index.css
+++ b/aboutcss/index.css
@@ -79,12 +79,36 @@ div.row-17.w-row:after {
   grid-row-start: 1;
 }
 
-@media screen and (max-width: 767px) {
-  .w-row, .w-container .w-row {
-    margin-left: 0;
-    margin-right: 0;
+
+
+@media screen and (max-width: 991px) {
+  .w-row, .w-container .w-row{
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .w-row, .w-container .w-row  {
+    max-width: 470px;
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .w-row, .w-container .w-row{
+    max-width: none;
+    width: 100%;
+  }
+}
+
+
+/*my pic*/
 
 div.column-23.w-col.w-col-6 {
   box-sizing: border-box;
@@ -99,16 +123,31 @@ div.column-23.w-col.w-col-6 {
   width: 40%;
 }
 
-@media screen and (max-width: 767px) {
+
+@media screen and (max-width: 991px) {
   div.column-23.w-col.w-col-6 {
-    left: auto;
-    right: auto;
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  div.column-23.w-col.w-col-6  {
+    max-width: 470px;
     width: 100%;
+    text-align: center;
+    margin-bottom: 150px;
   }
 }
 
 @media screen and (max-width: 479px) {
   div.column-23.w-col.w-col-6 {
+    max-width: none;
     width: 100%;
   }
 }
@@ -129,12 +168,34 @@ img.image-86 {
   transition: opacity 1500ms ease 0s;
 }
 
-@media screen and (max-width: 479px) {
-  img.image-86 {
-    position: relative;
-    z-index: 0;
+
+
+@media screen and (max-width: 991px) {
+  img.image-86  {
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
   }
 }
+
+@media screen and (max-width: 767px) {
+  img.image-86   {
+    max-width: 470px;
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  img.image-86  {
+    max-width: none;
+    width: 100%;
+  }
+}
+
 
 div.container-14.w-container {
   box-sizing: border-box;
@@ -166,13 +227,15 @@ div.container-14.w-container:after {
   grid-row-start: 1;
 }
 
+/*pic caption*/
+
 p.photocaption {
   box-sizing: border-box;
   clear: none;
   color: #a8a8a8;
   display: block;
   float: left;
-  font-family: Karla, sans-serif;
+  font-family:  Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 22px;
@@ -182,11 +245,34 @@ p.photocaption {
   text-align: left;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 991px) {
   p.photocaption {
-    float: left;
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
   }
 }
+
+@media screen and (max-width: 767px) {
+  p.photocaption  {
+    max-width: 470px;
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  p.photocaption  {
+    
+    max-width: none;
+    width: 100%;
+  }
+}
+
+/*hey there div*/
 
 div.column-24.w-clearfix.w-col.w-col-6 {
   box-sizing: border-box;
@@ -202,23 +288,31 @@ div.column-24.w-clearfix.w-col.w-col-6 {
   z-index: 60;
 }
 
-@media screen and (max-width: 767px) {
+
+@media screen and (max-width: 991px) {
   div.column-24.w-clearfix.w-col.w-col-6 {
-    left: auto;
-    margin-top: -136px;
-    overflow: visible;
-    padding-bottom: 115px;
-    right: auto;
-    width: 100%;
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  div.column-24.w-clearfix.w-col.w-col-6   {
+    max-width: 470px;
+    width: 70%;
+    
+    
   }
 }
 
 @media screen and (max-width: 479px) {
-  div.column-24.w-clearfix.w-col.w-col-6 {
-    margin-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
+  div.column-24.w-clearfix.w-col.w-col-6  {
+    max-width: none;
     width: 100%;
   }
 }
@@ -252,6 +346,8 @@ div.column-24.w-clearfix.w-col.w-col-6:before {
     width: 100%;
   }
 }
+
+
 
 div.column-24.w-clearfix.w-col.w-col-6:after {
   clear: both;
@@ -290,7 +386,7 @@ div.column-24.w-clearfix.w-col.w-col-6:after {
 h1.heading.black {
   box-sizing: border-box;
   color: #000;
-  font-family: gt-sectra-fine, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 24px;
   font-weight: 500;
   letter-spacing: .3px;
@@ -304,7 +400,7 @@ p.paragraph-2 {
   box-sizing: border-box;
   color: #000;
   display: block;
-  font-family: Karla, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 18px;
   font-weight:400;
   letter-spacing: -.2px;
@@ -315,24 +411,31 @@ p.paragraph-2 {
   text-align: left;
 }
 
+
+
 @media screen and (max-width: 991px) {
-  p.paragraph-2 {
-    margin-left: 0;
-    margin-right: 0;
+  p.paragraph-2 h1.heading.black {
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
   }
 }
 
 @media screen and (max-width: 767px) {
-  p.paragraph-2 {
-    margin-left: 0;
-    margin-right: 0;
+  p.paragraph-2 h1.heading.black {
+    max-width: 470px;
+    width: 70%;
   }
 }
 
 @media screen and (max-width: 479px) {
-  p.paragraph-2 {
-    margin-left: 0;
-    margin-right: 0;
+  p.paragraph-2 h1.heading.black {
+    max-width: none;
+    width: 100%;
   }
 }
 
@@ -344,7 +447,7 @@ div#resume.section {
   color: #1a1b1f;
   column-gap: 16px;
   display: block;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   grid-auto-columns: 1fr;
   grid-template-columns: minmax(auto, auto) minmax(auto, auto) minmax(auto, auto);
   grid-template-rows: auto auto;
@@ -360,59 +463,83 @@ div#resume.section {
 }
 
 @media screen and (max-width: 991px) {
-  .section {
-    margin-left: 40px;
-    margin-right: 40px;
-    padding-left: 0;
-    padding-right: 0;
+  div#resume.section {
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .section {
-    margin-left: 15px;
-    margin-right: 15px;
+  div#resume.section {
+    max-width: 470px;
+    width: 70%;
   }
 }
+
+@media screen and (max-width: 479px) {
+  div#resume.section{
+    max-width: none;
+    width: 100%;
+  }
+}
+
+/*max-width of container*/
 
 div.container {
   box-sizing: border-box;
   color: #1a1b1f;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   line-height: 28px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1140px;
+  max-width: 1440px;
   opacity: 1;
   width: 100%;
 }
 
-@media screen and (max-width: 767px) {
-  div.container {
+
+
+@media screen and (max-width: 991px) {
+  div.container  {
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
     text-align: center;
+    width: 80%;
   }
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 767px) {
   div.container {
-    padding-left: 20px;
-    padding-right: 20px;
+    max-width: 470px;
+    width: 70%;
   }
 }
 
 @media screen and (max-width: 479px) {
   div.container {
-    padding-left: 0;
-    padding-right: 0;
+    max-width: none;
+    width: 100%;
   }
 }
+
+
+
+/*grid laytout for ux skills and certificates*/
 
 div.w-layout-grid.personal-features-grid {
   box-sizing: border-box;
   color: #1a1b1f;
   column-gap: 80px;
   display: grid;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   grid-auto-columns: 1fr;
   grid-template-areas: ". ." ". .";
   grid-template-columns: 1fr 1fr;
@@ -438,6 +565,7 @@ div.w-layout-grid.personal-features-grid {
   div.w-layout-grid.personal-features-grid {
     max-width: 470px;
     width: 70%;
+   
   }
 }
 
@@ -451,7 +579,7 @@ div.w-layout-grid.personal-features-grid {
 div#w-node-dac044b7-be90-60f3-414d-4224828ffda1-adaf0624 {
   box-sizing: border-box;
   color: #1a1b1f;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   grid-column-end: 2;
   grid-column-start: 1;
   grid-row-end: 2;
@@ -472,10 +600,29 @@ div#resume.section div#w-node-dac044b7-be90-60f3-414d-4224828ffda1-adaf0624 h3 {
 }
 
 
-
 @media screen and (max-width: 991px) {
   div.paragraph-light.cc-position-name {
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: 30px;
+    margin-right: auto;
     text-align: center;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  div.paragraph-light.cc-position-name{
+    max-width: 470px;
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  div.paragraph-light.cc-position-name{
+    max-width: none;
+    width: 100%;
   }
 }
 
@@ -485,7 +632,7 @@ div#resume.section div#w-node-dac044b7-be90-60f3-414d-4224828ffda1-adaf0624 h3 {
 ul.w-list-unstyled {
   box-sizing: border-box;
   color: #1a1b1f;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   line-height: 28px;
   list-style: none;
   list-style: none;
@@ -500,7 +647,7 @@ div.speaking-text {
   box-sizing: border-box;
   color: #1a1b1f;
   display: inline-block;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   line-height: 28px;
   list-style: none;
   margin-right: 8px;
@@ -511,7 +658,7 @@ div.speaking-detail {
   box-sizing: border-box;
   color: #1a1b1f;
   display: inline-block;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   line-height: 28px;
   list-style: none;
   opacity: .6;
@@ -521,7 +668,7 @@ div.speaking-detail {
 div.upcoming-wrap {
   box-sizing: border-box;
   color: #1a1b1f;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   line-height: 28px;
   margin-bottom: 40px;
 }
@@ -529,7 +676,7 @@ div.upcoming-wrap {
 div#resume.section ul.w-list-unstyled li {
   box-sizing: border-box;
   color: #1a1b1f;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   line-height: 28px;
   list-style: none;
   margin-bottom: 10px;
@@ -541,7 +688,7 @@ div#resume.section ul.w-list-unstyled li {
 div#w-node-dac044b7-be90-60f3-414d-4224828ffe12-adaf0624 {
   box-sizing: border-box;
   color: #1a1b1f;
-  font-family: Montserrat,sans-serif;
+  font-family:Helvetica, sans-serif;
   grid-column-end: 3;
   grid-column-start: 2;
   grid-row-end: 2;
@@ -558,12 +705,16 @@ div#w-node-dac044b7-be90-60f3-414d-4224828ffe12-adaf0624 {
   }
 }
 
+
+
+
+
 /*Certificates section*/
 
 div#resume.section div#w-node-dac044b7-be90-60f3-414d-4224828ffe12-adaf0624 h3 {
   box-sizing: border-box;
   color: #1a1b1f;
-  font-family: Montserrat,sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 46px;
@@ -588,6 +739,7 @@ div#resume.section div#w-node-dac044b7-be90-60f3-414d-4224828ffe12-adaf0624 h3 {
   z-index: 6;
   margin-top: 5%;
 }
+
 
 .float-right {
   box-sizing: border-box;
@@ -632,4 +784,31 @@ a.social-icon-link.w-inline-block {
   padding-left: 0;
   position: relative;
   text-align: left;
+}
+
+@media screen and (max-width: 991px) {
+  .container-10.w-container a.social-icon-link.w-inline-block .footer-text {
+    grid-template-areas: "." "." "." ".";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .container-10.w-container a.social-icon-link.w-inline-block .footer-text{
+    max-width: 470px;
+    width: 70%;
+    margin-right: 20%;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .container-10.w-container a.social-icon-link.w-inline-block .footer-text{ 
+    max-width: none;
+    width: 100%;
+  }
 }
