--- a/aboutcss/index.css
+++ b/aboutcss/index.css
@@ -18,7 +18,7 @@ body {
   background-color: white;
     display: flex;
     list-style-type: none;
-    padding-left: 74%;
+    padding-left: 70%;
   
 }
 
@@ -407,7 +407,7 @@ p.paragraph-2 {
   line-height: 30px;
   margin: 0 auto 32px;
   padding-left: 0;
-  padding-right: 80px;
+  padding-right: 0;
   text-align: left;
 }
 
