--- a/aboutcss/index.css
+++ b/aboutcss/index.css
@@ -18,7 +18,8 @@ body {
   background-color: white;
     display: flex;
     list-style-type: none;
-    padding-left: 70%;
+   justify-content:right;
+   margin-right: 50px;
   
 }
 
